--- a/Web #1/index.html
+++ b/Web #1/index.html
@@ -27,7 +27,7 @@
     <div class="Content">
       <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <a class="navbar-brand" href="#">EmilPage</a>
+          <a class="navbar-brand" href="#">TechTalk</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -78,48 +78,55 @@
         <br />
         <div class="Row">
           <div class="Col">
-            <img
-              class="card"
-              src="https://cdn.glitch.com/6529cb52-cc02-4662-b67b-9a0cc3895f55%2FBanner_css-1280x680.png?v=1569345560907"
-              alt="Snow"
-              style="width:100%"
-            />
-            <h3>ReactJS</h3>
-            <p>ReactJS se basa en la creación de componentes interactivos.</p>
+            <div class="card">
+              <img
+                class="card Web"
+                src="https://cdn.glitch.com/6529cb52-cc02-4662-b67b-9a0cc3895f55%2FBanner_css-1280x680.png?v=1569345560907"
+                alt="Snow"
+                style="width:100%"
+              />
+              <h3>ReactJS</h3>
+              <p>ReactJS se basa en la creación de componentes interactivos.</p>
+            </div>
           </div>
           <div class="Col">
-            <img
-              class="card"
-              src="https://cdn.glitch.com/6529cb52-cc02-4662-b67b-9a0cc3895f55%2FMongoDB-1440x728.png?v=1569345559148"
-              alt="Forest"
-              style="width:100%"
-            />
-            <h3>MongoDB</h3>
-            <p>Con MongoDB puedes manejar una base datos No-SQL.</p>
+            <div class="card">
+              <img
+                class="card Web"
+                src="https://cdn.glitch.com/6529cb52-cc02-4662-b67b-9a0cc3895f55%2FMongoDB-1440x728.png?v=1569345559148"
+                alt="Forest"
+                style="width:100%"
+              />
+              <h3>MongoDB</h3>
+              <p>Con MongoDB puedes manejar una base datos No-SQL.</p>
+            </div>
           </div>
           <div class="Col">
-            <img
-              class="card"
-              src="https://cdn.glitch.com/6529cb52-cc02-4662-b67b-9a0cc3895f55%2Fblog.png?v=1569345549295"
-              alt="Mountains"
-              style="width:100%"
-            />
-            <h3>AngularJS</h3>
-            <p>
-              AngularJS es la mejor framework para aumentar la efiencia de
-              navegador.
-            </p>
+            <div class="card">
+              <img
+                class="card Web"
+                src="https://cdn.glitch.com/6529cb52-cc02-4662-b67b-9a0cc3895f55%2Fblog.png?v=1569345549295"
+                alt="Mountains"
+                style="width:100%"
+              />
+              <h3>AngularJS</h3>
+              <p>
+                AngularJS es la mejor framework para aumentar la efiencia de
+                navegador.
+              </p>
+            </div>
           </div>
         </div>
         <br />
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam,
-          quibusdam debitis libero est eius, modi sint nam blanditiis voluptates
-          earum beatae neque voluptatem, minus aperiam nesciunt iusto cumque
-          dolore? Voluptatum. Lorem ipsum dolor sit amet consectetur adipisicing
-          elit. Quae doloremque fugit, pariatur libero inventore veniam quisquam
-          necessitatibus nobis illo odio repudiandae sunt tempora rerum
-          molestias facilis atque enim quaerat nesciunt!
+        <h1 style="text-align: center;">Nuestra Filosofía</h1>
+        <hr />
+        <p style="padding: 10px;">
+          La naturaleza abierta de la web ofrece increíbles oportunidades para
+          los desarrolladores que desean crear sitios web o aplicaciones online.
+          Aquí puedes encontrar diferentes oportunidades de crecimiento
+          profesional. Para sacar el máximo provecho de las capacidades de la
+          web, necesitas saber cómo usarlas. Explora los enlaces anteriores para
+          aprender más sobre varias tecnologías web.
         </p>
       </div>
     </div>
