--- a/Web #1/noticias.html
+++ b/Web #1/noticias.html
@@ -61,26 +61,26 @@
         </nav>
       </header>
     </div>
-    <div class="Row">
-      <div class="Col">
-        <div class="News">
-          <h1>Noticias</h1>
-          <hr />
-          <h4>
-            Puedes mantenerte al dia con las noticias mas recientes del mundo
-            del Desarrollo Web.
-          </h4>
-        </div>
-        <div class="Col">
-          <iframe
-            src="https://feed.mikle.com/widget/v2/117089/"
-            height="436px"
-            width="650px"
-            class="fw-iframe"
-            scrolling="no"
-            frameborder="0"
-          ></iframe>
-        </div>
+    <div class="News">
+      <h1>Noticias</h1>
+      <hr />
+      <h4>
+        Puedes mantenerte al dia con las noticias mas recientes del mundo del
+        Desarrollo Web.
+      </h4>
+      <div
+        id="Container"
+        class="NewsFeed"
+        style="padding-bottom:56.25%; position:relative; display:block; width: 100%"
+      >
+        <iframe
+          width="100%"
+          height="100%"
+          src="https://tech.economictimes.indiatimes.com/widget/technology"
+          frameborder="0"
+          allowfullscreen=""
+          style="position:absolute; top:0; left: 0 "
+        ></iframe>
       </div>
     </div>
   </body>
