--- a/Web #1/servicios.html
+++ b/Web #1/servicios.html
@@ -72,30 +72,33 @@
       <h1>Servicios</h1>
       <hr />
       <ul class="list-group">
-        <li class="container list-group-item">
+        <li class="container list-group-item Links">
           Auditoría
           <span class="badge badge-dark badge-pill">Solicitar</span>
         </li>
-        <li class="container list-group-item">
+        <li class="container list-group-item Links">
           Asesoría Informática
           <span class="badge badge-dark badge-pill">Solicitar</span>
         </li>
-        <li class="container list-group-item">
+        <li class="container list-group-item Links">
           Análisis y Diseño de Proyectos
           <span class="badge badge-dark badge-pill">Solicitar</span>
         </li>
-        <li class="container list-group-item">
+        <li class="container list-group-item Links">
           Creación de Aplicaciones Móviles
           <span class="badge badge-dark badge-pill">Solicitar</span>
         </li>
-        <li class="container list-group-item">
+        <li class="container list-group-item Links">
           Administración de Bases de Datos
           <span class="badge badge-dark badge-pill">Solicitar</span>
         </li>
       </ul>
     </div>
+    <footer id="Footer">
+      Emil Barranco &copy; 2018-6076
+    </footer>
   </body>
-  <script src="Features.js"></script>
+  <script src="script.js"></script>
   <script
     src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
