--- a/Web #1/noticias.html
+++ b/Web #1/noticias.html
@@ -83,6 +83,9 @@
         ></iframe>
       </div>
     </div>
+    <footer id="Footer" style="position: fixed;">
+      Emil Barranco &copy; 2018-6076
+    </footer>
   </body>
   <script src="reddit.js"></script>
   <script src="Features.js"></script>
