--- a/Web #1/nosotros.html
+++ b/Web #1/nosotros.html
@@ -103,6 +103,9 @@
         </div>
       </div>
     </div>
+     <footer id="Footer">
+      Emil Barranco &copy; 2018-6076
+    </footer>
   </body>
   <script src="Features.js"></script>
   <script
