--- a/Web #1/index.html
+++ b/Web #1/index.html
@@ -130,7 +130,7 @@
         </p>
       </div>
     </div>
-    <footer id="Footer">
+    <footer id="FooterMain">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50774.47218628254!2d-122.0786640511646!3d37.30924479060954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb4571bd377ab%3A0x394d3fe1a3e178b4!2sCupertino%2C%20CA%2C%20USA!5e0!3m2!1sen!2sdo!4v1569350377917!5m2!1sen!2sdo"
         class="container"
