--- a/Web #1/index.html
+++ b/Web #1/index.html
@@ -21,7 +21,7 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Inicio</title>
+    <title>Contacto</title>
   </head>
   <body>
     <div class="Content">
@@ -41,7 +41,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
@@ -53,96 +53,44 @@
               <li class="nav-item">
                 <a class="nav-link" href="noticias.html">Noticias</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
         </nav>
       </header>
-      <div class="Slider">
-        <div class="Greets">
-          <div class="Greet">
-            <h1>Bienvenid@!</h1>
-            <h4>
-              Este es un espacio dedicado a la tecnología.
-            </h4>
-            <h5 id="currentTime"></h5>
-          </div>
-        </div>
-      </div>
-      <div class="Text">
-        <h1 id="new">
-          Últimas Tecnologías <span class="badge badge-dark">New</span>
-        </h1>
-        <br />
-        <div class="Row">
-          <div class="Col">
-            <div class="card">
-              <img
-                class="card Web"
-                src="https://cdn.glitch.com/6529cb52-cc02-4662-b67b-9a0cc3895f55%2FBanner_css-1280x680.png?v=1569345560907"
-                alt="Snow"
-                style="width:100%"
-              />
-              <h3>ReactJS</h3>
-              <p>ReactJS se basa en la creación de componentes interactivos.</p>
-            </div>
-          </div>
-          <div class="Col">
-            <div class="card">
-              <img
-                class="card Web"
-                src="https://cdn.glitch.com/6529cb52-cc02-4662-b67b-9a0cc3895f55%2FMongoDB-1440x728.png?v=1569345559148"
-                alt="Forest"
-                style="width:100%"
-              />
-              <h3>MongoDB</h3>
-              <p>Con MongoDB puedes manejar una base datos No-SQL.</p>
-            </div>
-          </div>
-          <div class="Col">
-            <div class="card">
-              <img
-                class="card Web"
-                src="https://cdn.glitch.com/6529cb52-cc02-4662-b67b-9a0cc3895f55%2Fblog.png?v=1569345549295"
-                alt="Mountains"
-                style="width:100%"
-              />
-              <h3>AngularJS</h3>
-              <p>
-                AngularJS es la mejor framework para aumentar la efiencia de
-                navegador.
-              </p>
-            </div>
-          </div>
-        </div>
-        <br />
-        <h1 style="text-align: center;">Nuestra Filosofía</h1>
-        <hr />
-        <p style="padding: 10px;">
-          La naturaleza abierta de la web ofrece increíbles oportunidades para
-          los desarrolladores que desean crear sitios web o aplicaciones online.
-          Aquí puedes encontrar diferentes oportunidades de crecimiento
-          profesional. Para sacar el máximo provecho de las capacidades de la
-          web, necesitas saber cómo usarlas. Explora los enlaces anteriores para
-          aprender más sobre varias tecnologías web.
-        </p>
+    </div>
+
+    <div class="Contact">
+      <h3>
+        Puedes encontrarnos en nuestros HeadQuarters en Cupertino, California.
+      </h3>
+      <h5 id="currentTime"></h5>
+      <hr />
+      <div class="container">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50774.47218628254!2d-122.0786640511646!3d37.30924479060954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb4571bd377ab%3A0x394d3fe1a3e178b4!2sCupertino%2C%20CA%2C%20USA!5e0!3m2!1sen!2sdo!4v1569350377917!5m2!1sen!2sdo"
+          class="container"
+          width="600"
+          height="350"
+          frameborder="2"
+          style="border:0;"
+          allowfullscreen=""
+        ></iframe>
+        <ul class="list-group list-group-horizontal-md Links">
+          <li class="list-group-item list-group-item-primary">Facebook <ion-icon name="logo-facebook"></ion-icon></li>
+          <li class="list-group-item list-group-item-dark">GitHub <ion-icon name="logo-github"></ion-icon></li>
+          <li class="list-group-item list-group-item-danger">YouTube <ion-icon name="logo-youtube"></ion-icon></li>
+        </ul>
       </div>
     </div>
-    <footer id="FooterMain">
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50774.47218628254!2d-122.0786640511646!3d37.30924479060954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb4571bd377ab%3A0x394d3fe1a3e178b4!2sCupertino%2C%20CA%2C%20USA!5e0!3m2!1sen!2sdo!4v1569350377917!5m2!1sen!2sdo"
-        class="container"
-        width="600"
-        height="90%"
-        frameborder="2"
-        style="border:0;"
-        allowfullscreen=""
-      ></iframe>
+    <footer id="Footer">
+      Emil Barranco &copy; 2018-6076
     </footer>
   </body>
-  <script src="Features.js"></script>
+  <script src="script.js"></script>
+  <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
   <script
     src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
