--- a/Web #1/contacto.html
+++ b/Web #1/contacto.html
@@ -79,14 +79,18 @@
           allowfullscreen=""
         ></iframe>
         <ul class="list-group list-group-horizontal-md Links">
-          <li class="list-group-item list-group-item-primary">Facebook</li>
-          <li class="list-group-item list-group-item-dark">GitHub</li>
-          <li class="list-group-item list-group-item-danger">YouTube</li>
+          <li class="list-group-item list-group-item-primary">Facebook <ion-icon name="logo-facebook"></ion-icon></li>
+          <li class="list-group-item list-group-item-dark">GitHub <ion-icon name="logo-github"></ion-icon></li>
+          <li class="list-group-item list-group-item-danger">YouTube <ion-icon name="logo-youtube"></ion-icon></li>
         </ul>
       </div>
     </div>
+    <footer id="Footer">
+      Emil Barranco &copy; 2018-6076
+    </footer>
   </body>
-  <script src="Features.js"></script>
+  <script src="script.js"></script>
+  <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
   <script
     src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
